<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint1"><i>Prepare your List</i></string>
    <string name="hint2"><i>Prepare your List</i></string>
    <string name="title_activity_offers">Offers</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_active_order">ActiveOrder</string>
    <string name="title_activity_faq">Faq</string>
    <string name="title_activity_order_history">OrderHistory</string>
    <string name="title_activity_delivery_address">DeliveryAddress</string>
    <string name="title_activity_delivery_address2">DeliveryAddress2</string>
    <string name="title_activity_slider_pane">MainActivity</string>
    <string name="title_activity_product_view">ProductViewActivity</string>
    <string name="title_activity_shopping_list">ShoppingListActivity</string>
    <string name="title_activity_order_detail">OrderDetail</string>
    <string name="title_activity_shopping_cart_activity2">ShoppingCartActivity2</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="text_resend">Resend</string>
    <string name="text_rs">\u20B9</string>
    <string name="text_percent">%</string>
    <string name="title_activity_delivery_area">DeliveryAreaActivity</string>
    <string name="skip_otp">Skip and Authenticate Later</string>
    <string name="class_constatnt_book_now_grocery">SHOPPING</string>
    <string name="class_constatnt_book_now_rest">BOOK NOW</string>
    <string name="font_text_cat">\uE900</string>
    <string name="font_home_cat"></string>
    <string name="font_home_my_cart"></string>
    <string name="font_home_contact"></string>
    <string name="font_home_offer"></string>
    <string name="font_home_order"></string>
    <string name="font_home_fav"></string>
    <string name="font_home_book"></string>
    <string name="title_activity_select_location">SelectLocationActivity</string>
    <string name="Notification.Title">Are we there yet?</string>
    <string name="Notification.Text">We\'re at %1$s!!!</string>
    <string name="fence_radius">.200</string>
    <string name="title_activity_pick_up">PickUpActivity</string>
    <string name="title_activity_pay_online">PayOnlineActivity</string>
    <string name="error_code_message">We are reviewing the error. Kindly check your network connection and try again after sometime.</string>
    <string name="title_activity_category_detail_jewellers">CategoryDetailJewellersActivity</string>
    <string name="title_activity_product_view_jewellers">ProductViewJewellersActivity</string>
    <string name="title_activity_master_category">MasterCategory</string>
    <string name="spinner_title">Select your Nearest Store</string>
    <string name="title_activity_recommend_products">RecommendProductsActivity</string>
    <string name="title_activity_recommend_products_grocery">RecommendProductsGroceryActivity
    </string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_forgot_pass">ForgotPassActivity</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="title_activity_search_location">SearchLocationActivity</string>
    <string name="string_proceed">Proceed To Order</string>
    <string name="pincode">Pincode:</string>
    <string name="select_pincode">Select your Pincode</string>
    <string name="list_header">Choose your nearest outlet</string>
    <string name="cancel_order_txt">Are you sure you want to cancel the order?</string>
    <string name="dialog_title">Message</string>
    <string name="select_table">Select Table</string>
    <string name="error_no_table">No table available</string>
    <string name="str_select">Pickup</string>
    <string name="str_deliver">Deliver</string>
    <string name="str_dining">Dine In</string>
    <string name="str_pickup">Pickup</string>
    <string name="str_payment_option_message">Please select the payment mode</string>
    <string name="str_already_added">Already added to the list</string>
    <string name="str_procedd_to_checkout">Proceed to checkout, you have</string>
    <string name="str_items_in_cart">item in your cart</string>
    <string name="str_copied">Copied</string>
    <string name="str_pending">Pending</string>
    <string name="str_approved">Approved</string>
    <string name="str_rejected">Rejected</string>
    <string name="str_cancelled">Cancelled</string>
    <string name="str_shipped">Shipped</string>
    <string name="str_delivered">Delivered</string>
    <string name="str_order_alrady">Your order is already</string>
    <string name="str_info">Info</string>
    <string name="str_shopping_list_item">List Name - 01</string>
    <string name="str_remove">Remove</string>
    <string name="str_no_record_found">No records found</string>
    <string name="str_weight">40 gms</string>
    <string name="str_choose_your_payment_method">Choose your payment method</string>
    <string name="str_cod">COD</string>
    <string name="str_online">Pay Now</string>
    <string name="str_title_refferal">Enter Referral Code</string>
    <string name="str_message_refferal">Kindly Login with Referral Code for and Earn Free Coupons.</string>
    <string name="str_login">Login</string>
    <string name="str_skip">Skip >></string>
    <string name="str_tax_label">Tax</string>
    <string name="str_add_address_edit_lbl">Edit Address</string>
    <string name="str_add_address_lbl">Delivery Address</string>
    <string name="str_add_address_country">Country</string>
    <string name="str_add_address_state">State</string>
    <string name="str_add_address_city">City</string>
    <string name="str_add_address_area">Area</string>
    <string name="str_add_address_full_address">Full Address</string>
    <string name="str_add_address_zip">Zip/Postalcode</string>
    <string name="str_lbl_done">Done</string>
    <string name="str_login_btn_lbl">Please Login to proceed</string>
    <string name="str_no_data_found">No Data found.</string>
    <string name="str_cancel_order">Cancel Order</string>
    <string name="str_booknow_fragment_enter_name">Enter Name</string>
    <string name="str_booknow_fragment_enter_mobile">Enter Mobile Number</string>
    <string name="str_booknow_fragment_mobile_valiation">Mobile No. should be of 10 digits</string>
    <string name="str_booknow_fragment_enter_valid_email">Enter Valid Email</string>
    <string name="str_booknow_fragment_enter_city">Enter City</string>
    <string name="str_booknow_fragment_enter_date">Please select date</string>
    <string name="layout_acticity_address_city">City</string>
    <string name="layout_acticity_address_search">Search here…</string>
    <string name="layout_activity_category_total">Total:</string>
    <string name="layout_activity_categorydetail_total">Total</string>
    <string name="layout_activity_categorydetail_checkout">Check Out</string>
    <string name="layout_select_activity_city">Select City</string>
    <string name="layout_activity_delivery_areas">Delivery Areas</string>
    <string name="layout_select_activity_citys">City:</string>
    <string name="layout_select_activity_no_area_found">Not area found</string>
    <string name="layout_activity_master_city_no_catg">No Category available</string>
    <string name="layout_notification_detail_confirm">Message</string>
    <string name="Yes">Confirmation</string>
    <string name="layout_notification_detail_yes">Yes</string>
    <string name="layout_notification_detail_no">No</string>
    <string name="layout_notification_detail_order_details">Order Details</string>
    <string name="layout_order_detail_no_records">No Records Info</string>
    <string name="layout_order_detail_delivery_address">Delivery Address:</string>
    <string name="layout_order_detail_delivery_items">Items Price</string>
    <string name="layout_order_detail_delivery_usd">USD</string>
    <string name="layout_order_detail_delivery_shiping_charge">Shipping Charges</string>
    <string name="layout_order_detail_discount">Discount</string>
    <string name="layout_reorder_items">Do you want to reorder these items?</string>
    <string name="layout_min_orders">Min Order</string>
    <string name="layout_order_detail_details">Details</string>
    <string name="layout_product_view_price">Price:</string>
    <string name="layout_product_view_select_quant">Select Quant</string>
    <string name="layout_product_view_recom_items">Recommended Items</string>
    <string name="layout_product_view_viewall">View All</string>
    <string name="layout_product_view_weight">Gold Weight :</string>
    <string name="layout_product_view_purity">Gold Purity :</string>
    <string name="layout_product_view_diamond_weight">Diamond Weight : </string>
    <string name="layout_product_view_stone_weight">Stone Weight : </string>
    <string name="layout_product_view_color">Color : </string>
    <string name="layout_product_view_calirty">Clarity : </string>
    <string name="layout_product_view_consult">Consult</string>
    <string name="layout_product_view_recom_products">Recommended Products</string>
    <string name="str_lbl_search">Search</string>
    <string name="str_lbl_search_products">Search for products</string>
    <string name="str_lbl_choose_location">Choose Location</string>
    <string name="str_lbl_choose_your_location">Choose your Location</string>
    <string name="str_lbl_my_location">Use my location</string>
    <string name="lable_consult_us">CONSULT US</string>
    <string name="str_lbl_product">Product</string>
    <string name="str_lbl_productname">Product Name</string>
    <string name="str_lbl_name">Name</string>
    <string name="str_lbl_enter_name">Enter Your Name</string>
    <string name="str_lbl_enter_phone">Phone</string>
    <string name="str_lbl_enter_your_phone">Enter your phone</string>
    <string name="str_lbl_email">Email</string>
    <string name="str_lbl_enter_your_email">Enter your email</string>
    <string name="str_lbl_city">City</string>
    <string name="str_lbl_enter_your_city">Enter your city</string>
    <string name="str_lbl_message">Message</string>
    <string name="str_lbl_your_message">Your message Here</string>
    <string name="str_lbl_submit">Submit</string>
    <string name="str_lbl_add_devl_address">Add Delivery Address</string>
    <string name="str_lbl_proceed">Proceed</string>
    <string name="str_lbl_booknow">Book Now</string>
    <string name="str_lbl_shopping">SHOPPING</string>
    <string name="str_lbl_qty">QTY</string>
    <string name="str_lbl_address">Address</string>
    <string name="str_lbl_grab">Grab Discount</string>
    <string name="str_lbl_freebies">Coupons and Freebies</string>
    <string name="str_lbl_sharecode">SHARE YOUR REFERRAL CODE</string>
    <string name="str_lbl_sharetext">SHARE</string>
    <string name="str_lbl_share_msgs">Share our App among your Friends and Reflatives. They will receive the Coupon and you will get one too</string>
    <string name="str_lbl_ok">OK</string>
    <string name="str_product_name">Product Name:</string>
    <string name="str_quantity">Quantity:</string>
    <string name="str_status">Status:</string>
    <string name="str_inprogress">In progress</string>
    <string name="str_order_no">Order Number :</string>
    <string name="str_order_date">Order date :</string>
    <string name="str_order_price">Order Price :</string>
    <string name="str_order_shipto">Ship to :</string>
    <string name="str_order_status">Status :</string>
    <string name="str_order_view">View Order</string>
    <string name="str_reorder">Re Order</string>
    <string name="str_cancel">Cancel</string>
</resources>