<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog_shape"
    android:layout_margin="20dp"
    >


    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_title_refferal"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="@color/color_light_blue"
        android:layout_alignParentTop="true"/>




    <View
        android:id="@+id/line"
        android:layout_below="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/color_light_blue"/>


    <TextView
        android:id="@+id/textMsg"
        android:layout_below="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:gravity="center"
        android:textSize="@dimen/text_size"
        android:text="@string/str_message_refferal"/>


    <Button
        android:id="@+id/okBtn"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/str_login"
        android:layout_below="@id/textMsg"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:background="@drawable/green_button_bg"/>

        <Button
            android:id="@+id/skipBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_below="@+id/okBtn"
            android:layout_centerHorizontal="true"
            android:text="@string/str_skip"
            android:gravity="center"
            android:background="@android:color/transparent"/>


</RelativeLayout>