<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rel_content"
            android:layout_alignParentTop="true" />

        <RelativeLayout
            android:id="@+id/rel_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonProceed"
            android:background="#f2f2f2">

            <TextView
                android:id="@+id/storeName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/str_lbl_address"
                android:textColor="#535353"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/storeName"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_toLeftOf="@+id/btnCall"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnCall"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/call_icon" />
        </RelativeLayout>

        <Button
            android:id="@+id/buttonProceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/ColorPrimary"
            android:text="@string/str_lbl_proceed"
            android:textColor="@color/app_text_color" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/ColorPrimary"
            android:text="@string/str_lbl_ok"
            android:textColor="@color/app_text_color"
            android:visibility="gone"/>
    </RelativeLayout>

</RelativeLayout>